--- a/english.css
+++ b/english.css
@@ -1,21 +1,27 @@
 #word{
     font-weight: bold;
     color:green;
+    margin-top: 2px;
+    margin-left: 2px;
 }
 #pron{
     margin-top: 3px;
     color:gray;
+    margin-left: 2px;
 }
 #mean{
     margin-top: 5px;
     color:green;
+    margin-left: 2px;
 }
 #tip{
     display: none;
+    margin-left: 2px;
 }
 #tip,#root{
     margin-top: 5px;
     color:brown;
+    margin-left: 2px;
 }
 table{
     width:99%;
