--- a/english.css
+++ b/english.css
@@ -13,15 +13,21 @@
     margin-top: 5px;
     color:green;
     margin-left: 2px;
+    margin-right: 2px;
 }
 #tip{
     display: none;
     margin-left: 2px;
+    margin-right: 2px;
 }
 #tip,#root{
     margin-top: 5px;
     color:brown;
     margin-left: 2px;
+    margin-right: 2px;
+}
+#root{
+    margin-bottom: 2px;
 }
 table{
     width:99%;
