--- a/english.css
+++ b/english.css
@@ -43,17 +43,7 @@ td{
     background-color: green;
     color: white;
 }
-
-a,a:visited{
-    color:green;
-    margin: 5px;
-    text-decoration: none;
-}
-a:hover{
-    color: green;
-    text-decoration:underline;
-}
 .sentence,.chinese{
     margin: 5px;
-    color:green;
+    color:gray;
 }
